--- a/native/pyproject.toml
+++ b/native/pyproject.toml
@@ -18,5 +18,11 @@ name = "native._lib"
 root = "src/fib.zig"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "ziggy-pydust==0.23.2"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.sdist]
+include = ["native/", "src/"]
+
+[tool.hatch.build.targets.wheel]
+include = ["native", "native/*.so", "native/*.pyi"]
